--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
   "name": "snip-vault",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "packageManager": "pnpm@10.15.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "build": "pnpm -r run build",
+    "dev": "pnpm --filter @snip-vault/web dev",
+    "typecheck": "pnpm -r run typecheck",
     "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "lint:fix": "eslint . --fix",
+    "format": "prettier -w \"**/*.{ts,tsx,js,json,css}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,json,css}\"",
+    "precompute": "pnpm --filter @snip-vault/core precompute"
   },
   "devDependencies": {
+    "typescript": "^5.9.2",
+    "tsup": "^8.0.0",
+    "eslint": "^9.34.0",
+    "prettier": "^3.6.2",
     "@eslint/js": "^9.33.0",
-    "@tailwindcss/vite": "^4.1.12",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.2",
-    "eslint": "^9.33.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "tailwindcss": "^4.1.12",
-    "vite": "^7.1.2"
+    "eslint-plugin-react-refresh": "^0.4.20"
   }
 }
