--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,7 +6,8 @@
     "baseUrl": ".",
     "paths": { "@/*": ["src/*"] },
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": false
+    "esModuleInterop": false,
+    "types": ["vite/client"]
   },
   "include": ["src", "vite-env.d.ts", "vite.config.ts"]
 }
