--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "snip-vault",
+  "type": "module",
   "private": true,
   "packageManager": "pnpm@10.15.0",
   "scripts": {
@@ -13,15 +14,16 @@
     "precompute": "pnpm --filter @snip-vault/core precompute"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
-    "tsup": "^8.0.0",
-    "eslint": "^9.34.0",
-    "prettier": "^3.6.2",
     "@eslint/js": "^9.33.0",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20"
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "prettier": "^3.6.2",
+    "tsup": "^8.0.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0"
   }
 }
